--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -9,9 +9,11 @@
 \begin{center}\bibpapertitlefont INTRODUCTION\end{center}
 \introfontsize
 
-The purpose of the Fifth Epochal Revelation is to expand cosmic consciousness and enhance spiritual perception.
+The purpose of the Fifth Epochal Revelation is
+to expand cosmic consciousness and enhance spiritual perception.
 The high ideals and the example of the life of Jesus are especially needed today,
-in the times of planetary crisis and pandemia of fear and madness, caused by intellectual ignorance and spiritual blindness.
+in the times of planetary crisis and pandemia of fear and madness,
+caused by intellectual ignorance and spiritual blindness.
 
 \bibemph{The British Study Edition of The Urantia Papers} has the following distinct features:
 
@@ -24,7 +26,6 @@ and was revised according to the present scientific knowledge and spiritual enli
 \item Long and hard to memorise phrases like ``three hundred and forty\hyp{}five thousand'' have been converted to a compact form ``345,000''. Likewise, for phrases like ``seventy\hyp{}five per cent'' a more compact form of ``75\%'' was chosen. Similarly, the time designations like ``fifteen minutes past four o’clock'' now read ``16:15''.
 \item Designation of the author of each paper (and Foreword) is printed in \textit{italics} on a line by itself just before the text.
 \item Paragraph numbering is used both in the superscript and in the ranges printed in the head\-er of every page.
-\item Suspected textual corruptions are indicated in the footnotes.
 \item The Bibliography of the human sources used in the Revelation is printed at the end of each Paper.
       When it was deemed essential the reference to the source(s) was also indicated in the footnotes.
 \end{itemize}
@@ -41,17 +42,21 @@ Realizing the great importance of this text, a group of volunteers and I have ca
 the original First Edition (1955) of the Urantia Papers, known at the time as \bibemph{The Urantia Book,}
 and made it available on my website in both electronic and printed forms:
 \begin{center}\myurl{http://www.bibles.org.uk/guardian-plates.html}\end{center}
-For deriving the etymology of the words coined by the revelators, I acknowledge the use of the notes by Dr~Chris Halvorson.
-I am grateful to my friends Jim George, Mitch Austin and Sergey Prokopov for their helpful suggestions and comments,
+For deriving the etymology of the words coined in the text,
+I acknowledge the use of the notes by Dr~Chris Halvorson.
+I am grateful to my friends Jim George, Mitch Austin and Sergey Prokopov
+for their helpful suggestions and comments,
 some of which have been incorporated into the study notes of the present edition.
 I would like to thank Irina Chernova for creating illustrations for this edition.
-For information on the human sources, upon which this Revelation is based, I am indebted almost entirely to the outstanding
+For information on the human sources, upon which this Revelation is based,
+I am indebted almost entirely to the outstanding
 research work by Matthew Block as published on his website:
 \begin{center}\myurl{https://urantiabooksources.com/}\end{center}
-A few of the sources related to the material of the Revelation related to the physical sciences have been discovered by myself
-independently.
+A few of the sources related to the material of the Revelation related to the physical sciences
+have been discovered by myself independently of Matthew's research.
 
-Last but not least I am deeply grateful to Troy R.~Bishop, whom I am honoured to call my mentor and dear friend.
+Last but not least I am deeply grateful to Troy R.~Bishop,
+whom I am honoured to call my mentor and dear friend.
 
 \tunemarkuptwo{noquiz}{}{%
 This PDF file also includes the interactive quiz (\totalcurqs\ questions in total) called \bibemph{The Cosmic Citizenship Quiz}.
