Fix a probable text corruption in 67:1.3

--- a/tex/p067.tex
+++ b/tex/p067.tex
@@ -12,7 +12,7 @@
 \usection{The Caligastia Betrayal}
 \vs p067 1:1 For 300,000 years Caligastia had been in charge of Urantia when Satan, Lucifer’s assistant, made one of his periodic inspection calls. And when Satan arrived on the planet, his appearance in no way resembled your caricatures of his nefarious majesty. He was, and still is, a Lanonandek Son of great brilliance. “And no marvel, for Satan himself is a brilliant creature of light.”
 \vs p067 1:2 In the course of this inspection Satan informed Caligastia of Lucifer’s then proposed “Declaration of Liberty,” and as we now know, the Prince agreed to betray the planet upon the announcement of the rebellion. The loyal universe personalities look with peculiar disdain upon Prince Caligastia because of this premeditated betrayal of trust. The Creator Son voiced this contempt when he said: “You are like your leader, Lucifer, and you have sinfully perpetuated his iniquity. He was a falsifier from the beginning of his self\hyp{}exaltation because he abode not in the truth.”
-\vs p067 1:3 In all the administrative work of a local universe no high trust is deemed more sacred than that reposed in a Planetary Prince who assumes responsibility for the welfare and guidance of the evolving mortals on a newly inhabited world. And of all forms of evil, none are more destructive of personality status than betrayal of trust and disloyalty to one’s confiding friends. In committing this deliberate sin, Caligastia so completely distorted his personality that his mind has never since been able fully to regain its equilibrium.
+\vs p067 1:3 In all the administrative work of a local universe no high trust is deemed more sacred than that reposed in a Planetary Prince who assumes responsibility for the welfare and guidance of the evolving mortals on a newly inhabited world. And of all forms of evil, none is more destructive of personality status than betrayal of trust\fnst{In 1955 text ``none are more destructive of personality status than betrayal of trust and disloyalty to one’s confiding friends''. The second clause was most likely added by Dr~Sadler in the attempt of putting psychological pressure upon Harold Sherman, when he falsely accused him of ``attempted rebellion'' and fabricated some ``messages from higher intelligences'' in the attempt to intimidate him. And this agrees with the phrase ``this deliberate sin'' in the singular in the following sentence. For more information see Chapter~3 in Volume Four of ``The Urantia Diaries of Harold and Martha Sherman'' \cite{Sherman1}.}. In committing this deliberate sin, Caligastia so completely distorted his personality that his mind has never since been able fully to regain its equilibrium.
 \vs p067 1:4 \pc There are many ways of looking at sin, but from the universe philosophic viewpoint sin is the attitude of a personality who is knowingly resisting cosmic reality. Error might be regarded as a misconception or distortion of reality. Evil is a partial realization of, or maladjustment to, universe realities. But sin is a purposeful resistance to divine reality --- a conscious choosing to oppose spiritual progress --- while iniquity consists in an open and persistent defiance of recognized reality and signifies such a degree of personality disintegration as to border on cosmic insanity.
 \vs p067 1:5 Error suggests lack of intellectual keenness; evil, deficiency of wisdom; sin, abject spiritual poverty; but iniquity is indicative of vanishing personality control.
 \vs p067 1:6 And when sin has so many times been chosen and so often been repeated, it may become habitual. Habitual sinners can easily become iniquitous, become wholehearted rebels against the universe and all of its divine realities. While all manner of sins may be forgiven, we doubt whether the established iniquiter would ever sincerely experience sorrow for his misdeeds or accept forgiveness for his sins.
@@ -77,3 +77,11 @@
 \vsetoff
 \vs p067 8:6 [Presented by a Melchizedek of Nebadon.]
 \quizlink
+\tunemarkuptwo{nobiblio}{}{%
+\begin{thebibliography}{100}
+\bibitem{Sherman1}
+Saskia Praamsma and Matthew Block.
+{``The Urantia Diaries of Harold and Martha Sherman, Volume Four: 1944--1945.''}
+{\em Square Circles Publishing}, 2018.
+\end{thebibliography}
+}
