Some code for the plain text build

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -772,14 +772,14 @@
 }
 \def\phoenixscale{0.15}
 \setcounter{DefaultLines}{3}
-\tolerance=3000
+\tolerance=9999
 \protected\def\print@vssup#1{\makebox[0.4em][l]{\@textsuperscript{\fontsize{7}{7}\bfseries#1}}\kern0.3em\relax}
 \newcommand{\authorfont}{\authorfontfamily\fontsize{22}{9}\bfseries\itshape}%
 % comment the following for plaintext edition
 %\protected\def\print@vssup#1{}
 %\def\pc{}
 %\setlength\parindent{18\p@}
-%\newcommand{\authorfont}{\fontsize{13}{9}\bfseries\itshape}%
+%\newcommand{\authorfont}{\fontsize{11}{9}\bfseries\itshape}%
 \renewcommand{\numw}{0.07\linewidth}
 \renewcommand{\txtw}{0.85\linewidth}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{6.9}{6.9}\selectfont}
@@ -800,9 +800,12 @@
 \newcommand{\bibtocsuperheadfont}{\fontsize{17}{17}\selectfont}
 \renewcommand{\bibtocheadfont}{\fontsize{11}{11}\mdseries}
 \renewcommand{\bibtocfont}{\fontsize{7.7}{15}\selectfont}
+%\renewcommand{\bibtocfont}{\fontsize{6.5}{13}\selectfont}
 \newcommand{\minitocfontsize}{\headingfont\fontsize{7.5}{7.5}\selectfont}
 \newcommand{\bibbookend}{\fontsize{17}{19}\selectfont}
 \newcommand{\urantiamainfontsize}{17/19}
+%\newcommand{\bibbookend}{\fontsize{15}{19}\selectfont}
+%\newcommand{\urantiamainfontsize}{15/19}
 \renewcommand{\footnotesize}{\fontsize{14}{16}\selectfont}
 }
 
