--- a/tex/p138.tex
+++ b/tex/p138.tex
@@ -42,7 +42,7 @@
 \vs p138 4:1 On the morrow all nine of them went by boat over to Kheresa to execute the formal calling of the next two apostles, James and Judas the twin sons of Alpheus, the nominees of James and John Zebedee. The fisherman twins were expecting Jesus and his apostles and were therefore awaiting them on the shore. James Zebedee presented the Master to the Kheresa fishermen, and Jesus, gazing on them, nodded and said, \textcolour{ubdarkred}{“Follow me.”}
 \vs p138 4:2 \pc That afternoon, which they spent together, Jesus fully instructed them concerning attendance upon festive gatherings, concluding his remarks by saying: \textcolour{ubdarkred}{“All men are my brothers. My Father in heaven does not despise any creature of our making. The kingdom of heaven is open to all men and women. No man may close the door of mercy in the face of any hungry soul who may seek to gain an entrance thereto. We will sit at meat with all who desire to hear of the kingdom. As our Father in heaven looks down upon men, they are all alike. Refuse not therefore to break bread with Pharisee or sinner, Sadducee or publican, Roman or Jew, rich or poor, free or bond. The door of the kingdom is wide open for all who desire to know the truth and to find God.”}
 \vs p138 4:3 \pc That night at a simple supper at the Alpheus home, the twin brothers were received into the apostolic family. Later in the evening Jesus gave his apostles their first lesson dealing with the origin, nature, and destiny of unclean spirits, but they could not comprehend the import of what he told them. They found it very easy to love and admire Jesus but very difficult to understand many of his teachings.
-\vs p138 4:4 After a night of rest the entire party, now numbering 11, went by boat over to Tarichea.
+\vs p138 4:4 After a night of rest the entire party, now numbering eleven, went by boat over to Tarichea.
 \usection{The Call of Thomas and Judas}
 \vs p138 5:1 Thomas the fisherman and Judas the wanderer met Jesus and the apostles at the fisher\hyp{}boat landing at Tarichea, and Thomas led the party to his near-by home. Philip now presented Thomas as his nominee for apostleship and Nathaniel presented Judas Iscariot, the Judean, for similar honours. Jesus looked upon Thomas and said: \textcolour{ubdarkred}{“Thomas, you lack faith; nevertheless, I receive you. Follow me.”} To Judas Iscariot the Master said: \textcolour{ubdarkred}{“Judas, we are all of one flesh, and as I receive you into our midst, I pray that you will always be loyal to your Galilean brethren. Follow me.”}
 \vs p138 5:2 \pc When they had refreshed themselves, Jesus took the twelve apart for a season to pray with them and to instruct them in the nature and work of the Holy Spirit, but again did they largely fail to comprehend the meaning of those wonderful truths which he endeavoured to teach them. One would grasp one point and one would comprehend another, but none of them could encompass the whole of his teaching. Always would they make the mistake of trying to fit Jesus’ new gospel into their old forms of religious belief. They could not grasp the idea that Jesus had come to proclaim a new gospel of salvation and to establish a new way of finding God; they did not perceive that he \bibemph{was} a new revelation of the Father in heaven.
