--- a/tex/p155.tex
+++ b/tex/p155.tex
@@ -15,7 +15,7 @@
 \vs p155 1:5 \textcolour{ubdarkred}{“Let me emphatically state this eternal truth: If you, by truth co\hyp{}ordination, learn to exemplify in your lives this beautiful wholeness of righteousness, your fellow men will then seek after you that they may gain what you have so acquired. The measure wherewith truth seekers are drawn to you represents the measure of your truth endowment, your righteousness. The extent to which you have to go with your message to the people is, in a way, the measure of your failure to live the whole or righteous life, the truth\hyp{}co\hyp{}ordinated life.”}
 \vs p155 1:6 And many other things the Master taught his apostles and the evangelists before they bade him good night and sought rest upon their pillows.
 \usection{The Evangelists in Chorazin}
-\vs p155 2:1 On Monday morning, May 23, Jesus directed Peter to go over to Chorazin with the twelve evangelists while he, with the 11, departed for Caesarea\hyp{}Philippi, going by way of the Jordan to the Damascus\hyp{}Capernaum road, thence north\hyp{}east to the junction with the road to Caesarea\hyp{}Philippi, and then on into that city, where they tarried and taught for two weeks. They arrived during the afternoon of Tuesday, May 24.
+\vs p155 2:1 On Monday morning, May 23, Jesus directed Peter to go over to Chorazin with the twelve evangelists while he, with the eleven, departed for Caesarea\hyp{}Philippi, going by way of the Jordan to the Damascus\hyp{}Capernaum road, thence north\hyp{}east to the junction with the road to Caesarea\hyp{}Philippi, and then on into that city, where they tarried and taught for two weeks. They arrived during the afternoon of Tuesday, May 24.
 \vs p155 2:2 Peter and the evangelists sojourned in Chorazin for two weeks, preaching the gospel of the kingdom to a small but earnest company of believers. But they were not able to win many new converts. No city of all Galilee yielded so few souls for the kingdom as Chorazin. In accordance with Peter’s instructions the twelve evangelists had less to say about healing --- things physical --- while they preached and taught with increased vigour the spiritual truths of the heavenly kingdom. These two weeks at Chorazin constituted a veritable baptism of adversity for the twelve evangelists in that it was the most difficult and unproductive period in their careers up to this time. Being thus deprived of the satisfaction of winning souls for the kingdom, each of them the more earnestly and honestly took stock of his own soul and its progress in the spiritual paths of the new life.
 \vs p155 2:3 When it appeared that no more people were minded to seek entrance into the kingdom, Peter, on Tuesday, June 7, called his associates together and departed for Caesarea\hyp{}Philippi to join Jesus and the apostles. They arrived about noontime on Wednesday and spent the entire evening in rehearsing their experiences among the unbelievers of Chorazin. During the discussions of this evening Jesus made further reference to the parable of the sower and taught them much about the meaning of the apparent failure of life undertakings.
 \usection{At Caesarea\hyp{}Philippi}
