--- a/tex/p181.tex
+++ b/tex/p181.tex
@@ -2,7 +2,7 @@
 \uminitoc{Last Words of Comfort}
 \uminitoc{Farewell Personal Admonitions}
 \author{Midwayer Commission}
-\vs p181 0:1 After the conclusion of the farewell discourse to the 11, Jesus visited informally with them and recounted many experiences which concerned them as a group and as individuals. At last it was beginning to dawn upon these Galileans that their friend and teacher was going to leave them, and their hope grasped at the promise that, after a little while, he would again be with them, but they were prone to forget that this return visit was also for a little while. Many of the apostles and the leading disciples really thought that this promise to return for a short season (the short interval between the resurrection and the ascension) indicated that Jesus was just going away for a brief visit with his Father, after which he would return to establish the kingdom. And such an interpretation of his teaching conformed both with their preconceived beliefs and with their ardent hopes. Since their lifelong beliefs and hopes of wish fulfilment were thus agreed, it was not difficult for them to find an interpretation of the Master’s words which would justify their intense longings.
+\vs p181 0:1 After the conclusion of the farewell discourse to the eleven, Jesus visited informally with them and recounted many experiences which concerned them as a group and as individuals. At last it was beginning to dawn upon these Galileans that their friend and teacher was going to leave them, and their hope grasped at the promise that, after a little while, he would again be with them, but they were prone to forget that this return visit was also for a little while. Many of the apostles and the leading disciples really thought that this promise to return for a short season (the short interval between the resurrection and the ascension) indicated that Jesus was just going away for a brief visit with his Father, after which he would return to establish the kingdom. And such an interpretation of his teaching conformed both with their preconceived beliefs and with their ardent hopes. Since their lifelong beliefs and hopes of wish fulfilment were thus agreed, it was not difficult for them to find an interpretation of the Master’s words which would justify their intense longings.
 \vs p181 0:2 After the farewell discourse had been discussed and had begun to settle down in their minds, Jesus again called the apostles to order and began the impartation of his final admonitions and warnings.
 \usection{Last Words of Comfort}
 \vs p181 1:1 When the eleven had taken their seats, Jesus stood and addressed them: \textcolour{ubdarkred}{“As long as I am with you in the flesh, I can be but one individual in your midst or in the entire world. But when I have been delivered from this investment of mortal nature, I will be able to return as a spirit indweller of each of you and of all other believers in this gospel of the kingdom. In this way the Son of Man will become a spiritual incarnation in the souls of all true believers.}
