--- a/tex/p182.tex
+++ b/tex/p182.tex
@@ -34,7 +34,7 @@
 \vs p182 1:26 \pc Thus did Jesus enlarge the living revelation of the name of God to all generations. As divine love reveals the nature of God, eternal truth discloses his name in ever\hyp{}enlarging proportions.
 \usection{Last Hour Before the Betrayal}
 \vs p182 2:1 The apostles were greatly shocked when they returned to their camp and found Judas absent. While the eleven were engaged in a heated discussion of their traitorous fellow apostle, David Zebedee and John Mark took Jesus to one side and revealed that they had kept Judas under observation for several days, and that they knew he intended to betray him into the hands of his enemies. Jesus listened to them but only said: \textcolour{ubdarkred}{“My friends, nothing can happen to the Son of Man unless the Father in heaven so wills. Let not your hearts be troubled; all things will work together for the glory of God and the salvation of men.”}
-\vs p182 2:2 The cheerful attitude of Jesus was waning. As the hour passed, he grew more and more serious, even sorrowful. The apostles, being much agitated, were loath to return to their tents even when requested to do so by the Master himself. Returning from his talk with David and John, he addressed his last words to all 11, saying: \textcolour{ubdarkred}{“My friends, go to your rest. Prepare yourselves for the work of tomorrow. Remember, we should all submit ourselves to the will of the Father in heaven. My peace I leave with you.”} And having thus spoken, he motioned them to their tents, but as they went, he called to Peter, James, and John, saying, \textcolour{ubdarkred}{“I desire that you remain with me for a little while.”}
+\vs p182 2:2 The cheerful attitude of Jesus was waning. As the hour passed, he grew more and more serious, even sorrowful. The apostles, being much agitated, were loath to return to their tents even when requested to do so by the Master himself. Returning from his talk with David and John, he addressed his last words to all eleven, saying: \textcolour{ubdarkred}{“My friends, go to your rest. Prepare yourselves for the work of tomorrow. Remember, we should all submit ourselves to the will of the Father in heaven. My peace I leave with you.”} And having thus spoken, he motioned them to their tents, but as they went, he called to Peter, James, and John, saying, \textcolour{ubdarkred}{“I desire that you remain with me for a little while.”}
 \vs p182 2:3 The apostles fell asleep only because they were literally exhausted; they had been running short on sleep ever since their arrival in Jerusalem. Before they went to their separate sleeping quarters, Simon Zelotes led them all over to his tent, where were stored the swords and other arms, and supplied each of them with this fighting equipment. All of them received these arms and girded themselves therewith except Nathaniel. Nathaniel, in refusing to arm himself, said: “My brethren, the Master has repeatedly told us that his kingdom is not of this world, and that his disciples should not fight with the sword to bring about its establishment. I believe this; I do not think the Master needs to have us employ the sword in his defence. We have all seen his mighty power and know that he could defend himself against his enemies if he so desired. If he will not resist his enemies, it must be that such a course represents his attempt to fulfil his Father’s will. I will pray, but I will not wield the sword.” When Andrew heard Nathaniel’s speech, he handed his sword back to Simon Zelotes. And so nine of them were armed as they separated for the night.
 \vs p182 2:4 Resentment of Judas’s being a traitor for the moment eclipsed everything else in the apostles’ minds. The Master’s comment in reference to Judas, spoken in the course of the last prayer, opened their eyes to the fact that he had forsaken them.
 \vs p182 2:5 \pc After the eight apostles had finally gone to their tents, and while Peter, James, and John were standing by to receive the Master’s orders, Jesus called to David Zebedee, \textcolour{ubdarkred}{“Send to me your most fleet and trustworthy messenger.”} When David brought to the Master one Jacob, once a runner on the overnight messenger service between Jerusalem and Bethsaida, Jesus, addressing him, said: \textcolour{ubdarkred}{“In all haste, go to Abner at Philadelphia and say: ‘The Master sends greetings of peace to you and says that the hour has come when he will be delivered into the hands of his enemies, who will put him to death, but that he will rise from the dead and appear to you shortly, before he goes to the Father, and that he will then give you guidance to the time when the new teacher shall come to live in your hearts.’”} And when Jacob had rehearsed this message to the Master’s satisfaction, Jesus sent him on his way, saying: \textcolour{ubdarkred}{“Fear not what any man may do to you, Jacob, for this night an unseen messenger will run by your side.”}
