--- a/tex/p184.tex
+++ b/tex/p184.tex
@@ -6,7 +6,7 @@
 \uminitoc{The Second Meeting of the Court}
 \author{Midwayer Commission}
 \vs p184 0:1 Representatives of Annas had secretly instructed the captain of the Roman soldiers to bring Jesus immediately to the palace of Annas after he had been arrested. The former high priest desired to maintain his prestige as the chief ecclesiastical authority of the Jews. He also had another purpose in detaining Jesus at his house for several hours, and that was to allow time for legally calling together the court of the Sanhedrin. It was not lawful to convene the Sanhedrin court before the time of the offering of the morning sacrifice in the temple, and this sacrifice was offered about 3:00.
-\vs p184 0:2 Annas knew that a court of Sanhedrists was in waiting at the palace of his son\hyp{}in\hyp{}law, Caiaphas. Some 30 members of the Sanhedrin had gathered at the home of the high priest by midnight so that they would be ready to sit in judgment on Jesus when he might be brought before them. Only those members were assembled who were strongly and openly opposed to Jesus and his teaching since it required only 23 to constitute a trial court.
+\vs p184 0:2 Annas knew that a court of Sanhedrists was in waiting at the palace of his son\hyp{}in\hyp{}law, Caiaphas. Some thirty members of the Sanhedrin had gathered at the home of the high priest by midnight so that they would be ready to sit in judgment on Jesus when he might be brought before them. Only those members were assembled who were strongly and openly opposed to Jesus and his teaching since it required only 23 to constitute a trial court.
 \vs p184 0:3 Jesus spent about three hours at the palace of Annas on Mount Olivet, not far from the garden of Gethsemane, where they arrested him. John Zebedee was free and safe in the palace of Annas not only because of the word of the Roman captain, but also because he and his brother James were well known to the older servants, having many times been guests at the palace as the former high priest was a distant relative of their mother, Salome.
 \usection{Examination by Annas}
 \vs p184 1:1 Annas, enriched by the temple revenues, his son\hyp{}in\hyp{}law the acting high priest, and with his relations to the Roman authorities, was indeed the most powerful single individual in all Jewry. He was a suave and politic planner and plotter. He desired to direct the matter of disposing of Jesus; he feared to trust such an important undertaking wholly to his brusque and aggressive son\hyp{}in\hyp{}law. Annas wanted to make sure that the Master’s trial was kept in the hands of the Sadducees; he feared the possible sympathy of some of the Pharisees, seeing that practically all of those members of the Sanhedrin who had espoused the cause of Jesus were Pharisees.
@@ -34,7 +34,7 @@
 \vs p184 2:13 Peter never fully believed that he could be forgiven until he met his Master after the resurrection and saw that he was received just as before the experiences of this tragic night of the denials.
 \usection{Before the Court of Sanhedrists}
 \vs p184 3:1 It was about 3:30 this Friday morning when the chief priest, Caiaphas, called the Sanhedrist court of inquiry to order and asked that Jesus be brought before them for his formal trial. On three previous occasions the Sanhedrin, by a large majority vote, had decreed the death of Jesus, had decided that he was worthy of death on informal charges of lawbreaking, blasphemy, and flouting the traditions of the fathers of Israel.
-\vs p184 3:2 This was not a regularly called meeting of the Sanhedrin and was not held in the usual place, the chamber of hewn stone in the temple. This was a special trial court of some 30 Sanhedrists and was convened in the palace of the high priest. John Zebedee was present with Jesus throughout this so\hyp{}called trial.
+\vs p184 3:2 This was not a regularly called meeting of the Sanhedrin and was not held in the usual place, the chamber of hewn stone in the temple. This was a special trial court of some thirty Sanhedrists and was convened in the palace of the high priest. John Zebedee was present with Jesus throughout this so\hyp{}called trial.
 \vs p184 3:3 How these chief priests, scribes, Sadducees, and some of the Pharisees flattered themselves that Jesus, the disturber of their position and the challenger of their authority, was now securely in their hands! And they were resolved that he should never live to escape their vengeful clutches.
 \vs p184 3:4 Ordinarily, the Jews, when trying a man on a capital charge, proceeded with great caution and provided every safeguard of fairness in the selection of witnesses and the entire conduct of the trial. But on this occasion, Caiaphas was more of a prosecutor than an unbiased judge.
 \vs p184 3:5 \pc Jesus appeared before this court clothed in his usual garments and with his hands bound together behind his back. The entire court was startled and somewhat confused by his majestic appearance. Never had they gazed upon such a prisoner nor witnessed such composure in a man on trial for his life.
@@ -51,7 +51,7 @@
 \vs p184 3:16 Jesus manifested no interest in any question asked him when before Annas or the Sanhedrists except the one question relative to his bestowal mission. When asked if he were the Son of God, he instantly and unequivocally answered in the affirmative.
 \vs p184 3:17 Annas desired that the trial proceed further, and that charges of a definite nature regarding Jesus’ relation to the Roman law and Roman institutions be formulated for subsequent presentation to Pilate. The councillors were anxious to carry these matters to a speedy termination, not only because it was the preparation day for the Passover and no secular work should be done after noon, but also because they feared Pilate might any time return to the Roman capital of Judea, Caesarea, since he was in Jerusalem only for the Passover celebration.
 \vs p184 3:18 But Annas did not succeed in keeping control of the court. After Jesus had so unexpectedly answered Caiaphas, the high priest stepped forward and smote him in the face with his hand. Annas was truly shocked as the other members of the court, in passing out of the room, spit in Jesus’ face, and many of them mockingly slapped him with the palms of their hands. And thus in disorder and with such unheard\hyp{}of confusion this first session of the Sanhedrist trial of Jesus ended at 4:30.
-\vs p184 3:19 \pc 30 prejudiced and tradition\hyp{}blinded false judges, with their false witnesses, are presuming to sit in judgment on the righteous Creator of a universe. And these impassioned accusers are exasperated by the majestic silence and superb bearing of this God\hyp{}man. His silence is terrible to endure; his speech is fearlessly defiant. He is unmoved by their threats and undaunted by their assaults. Man sits in judgment on God, but even then he loves them and would save them if he could.
+\vs p184 3:19 \pc Thirty prejudiced and tradition\hyp{}blinded false judges, with their false witnesses, are presuming to sit in judgment on the righteous Creator of a universe. And these impassioned accusers are exasperated by the majestic silence and superb bearing of this God\hyp{}man. His silence is terrible to endure; his speech is fearlessly defiant. He is unmoved by their threats and undaunted by their assaults. Man sits in judgment on God, but even then he loves them and would save them if he could.
 \usection{The Hour of Humiliation}
 \vs p184 4:1 The Jewish law required that, in the matter of passing the death sentence, there should be two sessions of the court. This second session was to be held on the day following the first, and the intervening time was to be spent in fasting and mourning by the members of the court. But these men could not await the next day for the confirmation of their decision that Jesus must die. They waited only one hour. In the meantime Jesus was left in the audience chamber in the custody of the temple guards, who, with the servants of the high priest, amused themselves by heaping every sort of indignity upon the Son of Man. They mocked him, spit upon him, and cruelly buffeted him. They would strike him in the face with a rod and then say, “Prophesy to us, you the Deliverer, who it was that struck you.” And thus they went on for one full hour, reviling and mistreating this unresisting man of Galilee.
 \vs p184 4:2 During this tragic hour of suffering and mock trials before the ignorant and unfeeling guards and servants, John Zebedee waited in lonely terror in an adjoining room. When these abuses first started, Jesus indicated to John, by a nod of his head, that he should retire. The Master well knew that, if he permitted his apostle to remain in the room to witness these indignities, John’s resentment would be so aroused as to produce such an outbreak of protesting indignation as would probably result in his death.
